<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="#E6E6E6"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/linearlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:id="@+id/nameTitle"
        android:background="@android:color/holo_green_dark"
        android:textColor="#EEEEEE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:padding="2dp"
        android:textSize="18sp"
        android:text="@string/nameActivity"
        android:gravity="center"
        android:layout_marginTop="1dp"
        />
    <TextView
        android:id="@+id/name11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nameTitle"
        android:padding="2dp"
        android:textSize="18sp"
        android:text="@string/blablbal"
        android:layout_marginTop="1dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:textColor="#EEEEEE"
        android:layout_alignParentStart="true"
        android:padding="2dp"
        android:layout_below="@id/name11"
        android:textSize="18sp"
        android:text="@string/date"
        android:layout_marginTop="1dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/game_date11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dateTitle"
        android:padding="2dp"
        android:textSize="18sp"
        android:text="@string/blablbal"
        android:layout_marginTop="1dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/locationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:padding="2dp"
        android:layout_below="@id/game_date11"
        android:textSize="18sp"
        android:text="@string/location"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:background="@android:color/holo_green_dark"
        android:textColor="#EEEEEE"
        />
    <TextView
        android:id="@+id/location11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/locationTitle"
        android:padding="2dp"
        android:textSize="18sp"
        android:text="@string/blablbal"
        android:layout_marginTop="1dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/NumOfPlayersTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:textColor="#EEEEEE"
        android:layout_alignParentStart="true"
        android:padding="2dp"
        android:layout_below="@id/location11"
        android:textSize="18sp"
        android:text="@string/numPlayer"
        android:layout_marginTop="1dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/number_of_players11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/NumOfPlayersTitle"
        android:padding="2dp"
        android:textSize="18sp"
        android:text="@string/blablbal"
        android:layout_marginTop="1dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/CreatedByTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:textColor="#EEEEEE"
        android:layout_alignParentStart="true"
        android:padding="2dp"
        android:layout_below="@id/number_of_players11"
        android:textSize="18sp"
        android:text="@string/Create"
        android:layout_marginTop="1dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/created_by11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:padding="2dp"
        android:layout_below="@+id/CreatedByTitle"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/blablbal"
        android:layout_marginTop="1dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/spotsLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:padding="2dp"
        android:layout_below="@+id/created_by11"
        android:textSize="15sp"

        android:textStyle="bold"
        android:text="@string/moreLeft"
        android:layout_marginTop="1dp"

        android:gravity="center"
        />

    <Button
        android:id="@+id/submit_activity2"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@+id/spotsLeft"
        android:layout_marginTop="1dp"
        android:background="@drawable/buttons"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/joinActivity"
        android:textColor="@android:color/background_light"

        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recylerJoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/submit_activity2"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="140dp"
        android:background="#E6E6E6"
        />

    <EditText
        android:id="@+id/add_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recylerJoin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:hint="@string/addCommit"
        android:inputType="text"
        android:padding="6dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/add_comments_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@+id/add_comments"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="20dp"

        android:background="@drawable/buttons"
        android:text="@string/addCom"
        android:textColor="@android:color/background_light" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recylerCommit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_comments_button"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>